# Caen1720_1290_Analyzer

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TIDecode.cxx  TIDecode.h  TIRootFileSetup.cxx  TIRootFileSetup.h  TI_LinkDef.h  V1290EvioDecode.cxx  V1290EvioDecode.h  V1290RootFileSetup.cxx  V1290RootFileSetup.h  V1290_LinkDef.h  V1720EvioDecode.cxx  V1720EvioDecode.h  V1720RootFileSetup.cxx  V1720RootFileSetup.h  V1720_LinkDef.h  rebuild_analyzer.sh  root_tree_create_v3.cpp  temp_analysis.C  test.cpp  test2.cpp  testEvio.cpp
cmake/: FindOrInstallQt6.cmake
resources/: divided_canvas.C  multiple_waveforms.C  multiple_waveforms_calibrated.C  single_waveform.C  tdc_delta_t.C  tdc_delta_t_new.C  tdc_delta_t_with_stats.C  temp_script.C  ti_delta_t.C  ti_multiple_waveforms.C
src/gui/: MainWindow.cpp  MainWindow.h  main.cpp
